--- a/template/login.html
+++ b/template/login.html
@@ -18,7 +18,7 @@
                     <input type="hidden" name="referer" value="login" />
                     <input type="hidden" name="redirect" value="${redirect}" />
                     <legend><h1 class="font-yahei">登录</h1></legend>
-                    <label for="username">用户名</label>
+                    <label for="username"><font color="#FF0000">*</font>用户名</label>
                     <input type="text" id="username" name="username" class="input-block-level" required="required" maxlength="16" />
                     <label for="password">密码</label>
                     <input type="password" id="password" name="password" class="input-block-level" maxlength="16" />
