--- a/template/user/password_edit.html
+++ b/template/user/password_edit.html
@@ -4,16 +4,16 @@
                 <div class="content-wrap">
                     <div class="content">
                         <ul class="nav nav-tabs">
-                            <li class="active"><a>修改用户</a></li>
+                            <li class="active"><a>修改用户密码</a></li>
                             <li><a href="javascript: history.back()">返回</a></li>
                         </ul>
-                        <form action="user/${model.id}" method="post">
+                        <form action="user/${model.id}/password" method="post">
                             <input type="hidden" name="_method" value="put" />
                             <fieldset>
                                 <label for="username">用户名</label>
                                 <input type="text" id="username" value="${model.username}" disabled="disabled" />
-                                <label for="name"><font color="#FF0000">*</font>姓名</label>
-                                <input type="text" id="name" name="name" value="${model.name}" required="required" maxlength="32" />
+                                <label for="password">密码</label>
+                                <input type="password" id="password" name="password" maxlength="16" />
                             </fieldset>
                             <button type="submit" class="btn btn-primary">提交</button>
                         </form>
