--- a/template/include/footer.html
+++ b/template/include/footer.html
@@ -3,7 +3,7 @@
                 <div class="row">
                     <address class="span4 muted">联系我: <a href="mailto:panhaichun@gmail.com">panhaichun@gmail.com</a></address>
                     <address class="span4 muted">QQ: 285299451</address>
-                    <address class="span4 muted">Github: <a href="http">项目地址</a></address>
+                    <address class="span4 muted">Github: <a href="https://github.com/panhaichun/panzixuan">项目地址</a></address>
                 </div>
                 <p class="muted">Copyright &copy; <a href="http://www.panzixuan.com" target="_blank">panzixuan.com</a> 版权所有</p>
             </div>
