--- a/template/error.html
+++ b/template/error.html
@@ -2,8 +2,9 @@
 <html lang="zh-CN">
     <head>
         <meta charset="${config.encoding}" />
-        <title>${config.site_name} - 出错啦</title>
         <meta http-equiv="Cache-Control" content="no-cache" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>${config.site_name} - 出错啦</title>
         <base href="/" />
         <link rel="stylesheet" href="css/bootstrap.css" />
         <link rel="stylesheet" href="css/base.css" />
@@ -24,6 +25,5 @@
                 </div>
             </div>
         </section>
-
     </body>
 </html>
