--- a/template/include/header.html
+++ b/template/include/header.html
@@ -50,7 +50,7 @@
                     <li><a href="profile/edit">修改信息</a></li>
                     <li><a href="profile/password/edit">修改密码</a></li>
                     <li class="divider"></li>
-                    <li><a href="logout?redirect=${login_redirect}">退出</a></li>
+                    <li><a href="logout">退出</a></li>
                 </ul>
             </div>
             % if principal.get_prototype().contains_role('MANAGEMENT'):
