--- a/template/error.html
+++ b/template/error.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh_CN">
     <head>
         <meta charset="${config.encoding}" />
         <meta http-equiv="Cache-Control" content="no-cache" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>${config.site_name} - 出错啦</title>
+        <title>${config.site_name} - 出错啦!</title>
         <base href="/" />
         <link rel="stylesheet" href="css/bootstrap.css" />
         <link rel="stylesheet" href="css/base.css" />
     </head>
-    <body class="bg-body">
-        <section class="page-content">
-            <div class="container">
-                <div class="content-wrap">
-                    <div class="content">
-                        <div class="page-header">
-                            <h1 class="font-yahei">出错啦!</h1>
-                        </div>
-                        <div class="alert alert-error">
-                            <strong>${status}</strong> ${message}
-                        </div>
-                        <button class="btn btn-primary btn-large font-yahei" onclick="history.back()">返回</button>
-                    </div>
+    <body>
+        <div class="container">
+            <div class="content-error">
+                <div class="page-header">
+                    <h1><span class="glyphicon glyphicon-warning-sign"></span> 出错啦!</h1>
                 </div>
+                <div class="alert alert-danger">
+                    <strong>${status}</strong> ${message}
+                </div>
+                <button class="btn btn-primary btn-lg" onclick="history.back()"><span class="glyphicon glyphicon-hand-left"></span> 返回</button>
             </div>
-        </section>
-        
+        </div>
     </body>
 </html>
