--- a/template/group/add.html
+++ b/template/group/add.html
@@ -1,25 +1,46 @@
 <%include file="../include/header.html" />
         <%def name="S(x)">${x if x else ''}</%def>
-        <section class="page-content">
-            <div class="container">
-                <div class="content-wrap">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
                     <div class="content">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a>创建组</a></li>
-                            <li><a href="javascript: history.back()">返回</a></li>
+                        <div class="panel panel-menu">
+                            <div class="panel-heading"><h4><span class="glyphicon glyphicon-cog"></span> 系统管理</h4></div>
+                        </div>
+                        <div class="list-group wrap">
+                            <a href="user" class="list-group-item">
+                                <span class="glyphicon glyphicon-folder-close"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                            <a href="javascript:" class="list-group-item active">
+                                <span class="glyphicon glyphicon-folder-open"></span> 组 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                            <a href="log" class="list-group-item">
+                                <span class="glyphicon glyphicon-folder-close"></span> 日志 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="content">
+                        <ul class="nav nav-pills wrap">
+                            <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
+                            <li><a href="group"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
+                            <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="group" method="post">
+                        <form action="group" method="post" class="wrap" style="width: 320px;">
                             <input type="hidden" name="parent_id" value="${S(parent_id)}" />
-                            <fieldset>
-                                <label for="name"><font color="#FF0000">*</font>名称</label>
-                                <input type="text" id="name" name="name" required="required" maxlength="32" />
+                            <div class="form-group">
+                                <label for="name"><font color="#ff0000">*</font>名称</label>
+                                <input type="text" id="name" name="name" class="form-control" required="required" maxlength="32" />
+                            </div>
+                            <div class="form-group">
                                 <label for="description">描述</label>
-                                <textarea id="description" name="description" rows="3" maxlength="128"></textarea>
-                            </fieldset>
-                            <button class="btn btn-primary">提交</button>
+                                <textarea id="description" name="description" class="form-control" rows="3" maxlength="128"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 提交</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 <%include file="../include/footer.html" />
