--- a/template/group/view.html
+++ b/template/group/view.html
@@ -1,18 +1,41 @@
 <%include file="../include/header.html" />
-        <section class="page-content">
-            <div class="container">
-                <div class="content-wrap">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
                     <div class="content">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a>查看组</a></li>
-                            <li><a href="javascript: history.back()">返回</a></li>
+                        <div class="panel panel-menu">
+                            <div class="panel-heading"><h4><span class="glyphicon glyphicon-cog"></span> 系统管理</h4></div>
+                        </div>
+                        <div class="list-group wrap">
+                            <a href="user" class="list-group-item">
+                                <span class="glyphicon glyphicon-folder-close"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                            <a href="javascript:" class="list-group-item active">
+                                <span class="glyphicon glyphicon-folder-open"></span> 组 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                            <a href="log" class="list-group-item">
+                                <span class="glyphicon glyphicon-folder-close"></span> 日志 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="content">
+                        <ul class="nav nav-pills wrap">
+                            <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-expand"></span> 查看</a></li>
+                            <li><a href="group/${model.id}/edit"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
+                            <li><a href="group/add?parent_id=${model.id}"><span class="glyphicon glyphicon-plus"></span> 创建子组</a></li>
+                            <li><a href="group/${model.id}/roles/edit"><span class="glyphicon glyphicon-wrench"></span> 设置角色</a></li>
+                            <li><a href="group"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
+                            <li><a href="group/add"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
+                            <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <dl>
+                        <dl class="dl-horizontal wrap">
                             <dt>名称</dt>
                             <dd>${model.name}</dd>
                             <dt>描述</dt>
                             <dd>${model.description}</dd>
-                            <dt>包含角色</dt>
+                            <dt>拥有角色</dt>
                             <dd>
                                 % for r in model.get_contain_roles():
                                 ${r.name} [${r.description}]<br />
@@ -22,5 +45,5 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 <%include file="../include/footer.html" />
