--- a/template/include/header.html
+++ b/template/include/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh_CN">
     <head>
         <meta charset="${config.encoding}" />
         % if subtitle:
@@ -23,53 +23,57 @@
         % endfor
         % endif
     </head>
-    <body class="bg-body">
-        <header class="navbar-fixed-top">
+    <body>
+        <header class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="row">
-                    <div class="span5"><h1 class="font-yahei header-title">梓萱，Happy Everyday</h1></div>
-                    <div class="span7 nav-btn">
-                        <ul class="inline pull-left">
-                            <li><a href="blog" class="active btn btn-large btn-success font-yahei">成长日志</a></li>
-                            <li><a href="album" class="btn btn-large btn-info font-yahei">生活剪影</a></li>
-                        </ul>
-                        <form class="input-append pull-right search" method="get">
-                            <input type="text" placeholder="我想找..." />
-                            <button title="查询" class="btn btn-info" type="submit"><i class="icon-search"></i></button>
+                    <div class="col-md-4">
+                        <h1><a href=""><span class="glyphicon glyphicon-home"></span> 梓萱，Happy Everyday</a></h1>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="pull-right">
+                            <a href="blog" class="btn btn-success btn-lg active"><span class="glyphicon glyphicon-book"></span> 日志</a>
+                            <a href="album" class="btn btn-info btn-lg"><span class="glyphicon glyphicon-camera"></span> 剪影</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <form class="pull-right" action="search" method="get">
+                            <div class="input-group">
+                                <input type="text" name="keyword" value="${top_keyword if top_keyword else ''}" class="form-control" placeholder="我想找..." />
+                                <span class="input-group-addon btn btn-primary" onclick="$(this).parents('form').submit();">
+                                    <span class="glyphicon glyphicon-search"></span>
+                                </span>
+                            </div>
                         </form>
                     </div>
                 </div>
             </div>
-        </header>
-        <div class="control-box affix" style="right: 40px;">
             % if principal:
-            <div class="btn-group">
-                <button class="btn btn-large btn-info dropdown-toggle font-yahei" data-toggle="dropdown"><i class="icon-user"></i> <span style="display: inline-block; max-width: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="${principal.get_prototype().name}">${principal.get_prototype().name}</span> <span class="caret"></span></button>
-                <ul class="dropdown-menu" style="z-index: 999999">
-                    <li><a href="profile">个人信息</a></li>
-                    <li><a href="profile/edit">修改信息</a></li>
-                    <li><a href="profile/password/edit">修改密码</a></li>
-                    <li class="divider"></li>
-                    <li><a href="logout">退出</a></li>
-                </ul>
-            </div>
-            % if principal.get_prototype().contains_role('MANAGEMENT'):
-            <div class="btn-group">
-                <button class="btn btn-large btn-danger dropdown-toggle font-yahei" data-toggle="dropdown"><i class="icon-edit"></i> 发布 <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                    <li><a href="blog/add">日志</a></li>
-                    <li class="divider"></li>
-                    <li><a href="album/add">照片</a></li>
-                </ul>
-            </div>
-            <div class="btn-group">
-                <button class="btn btn-large btn-success dropdown-toggle font-yahei" data-toggle="dropdown"><i class="icon-wrench"></i> 管理 <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                    <li><a href="group">组</a></li>
-                    <li class="divider"></li>
-                    <li><a href="user">用户</a></li>
-                </ul>
+            <div class="control-box affix">
+                <div class="btn-group pull-right">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a href="profile"><span class="glyphicon glyphicon-expand"></span> ${principal.get_prototype().name}</a></li>
+                      <li class="divider"></li>
+                      <li><a href="logout" onclick="return confirm('确定要退出吗?');"><span class="glyphicon glyphicon-log-out"></span> 退出</a></li>
+                    </ul>
+                </div>
+                % if principal.get_prototype().contains_role('MANAGEMENT'):
+                <div class="clearfix"></div>
+                <div class="btn-group pull-right">
+                    <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="blog/add"><span class="glyphicon glyphicon-edit"></span> 日志</a></li>
+                        <li><a href="album/add"><span class="glyphicon glyphicon-edit"></span> 相片</a></li>
+                        <li class="divider"></li>
+                        <li><a href="user"><span class="glyphicon glyphicon-wrench"></span> 系统</a></li>
+                    </ul>
+                </div>
+                % endif
             </div>
             % endif
-            % endif
-        </div>
+        </header>
