--- a/template/profile/password_edit.html
+++ b/template/profile/password_edit.html
@@ -1,40 +1,62 @@
 <%include file="../include/header.html" />
-        <section class="page-content">
-            <div class="container">
-                <div class="content-wrap">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
                     <div class="content">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a>修改密码</a></li>
-                            <li><a href="javascript: history.back()">返回</a></li>
+                        <div class="panel panel-menu">
+                            <div class="panel-heading"><h4><span class="glyphicon glyphicon-user"></span> 个人中心</h4></div>
+                        </div>
+                        <div class="list-group wrap">
+                            <a href="profile" class="list-group-item">
+                                <span class="glyphicon glyphicon-folder-close"></span> 个人信息 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                            <a href="javascript:" class="list-group-item active">
+                                <span class="glyphicon glyphicon-folder-open"></span> 密码 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                            <a href="profile/log" class="list-group-item">
+                                <span class="glyphicon glyphicon-folder-close"></span> 日志 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="content">
+                        <ul class="nav nav-pills wrap">
+                            <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
+                            <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="profile/password" method="post">
+                        <form id="primary-form" action="profile/password" method="post" class="wrap" style="width: 320px;">
                             <input type="hidden" name="_method" value="put" />
-                            <fieldset>
+                            <div class="form-group">
                                 <label for="username">用户名</label>
-                                <input type="text" id="username" value="${model.username}" disabled="disabled" />
+                                <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
+                            </div>
+                            <div class="form-group">
                                 <label for="original-password">原密码</label>
-                                <input type="password" id="original-password" name="original_password" maxlength="16" />
+                                <input type="password" id="original-password" name="original_password" class="form-control" maxlength="16" />
+                            </div>
+                            <div class="form-group">
                                 <label for="password">密码</label>
-                                <input type="password" id="password" name="password" maxlength="16" />
+                                <input type="password" id="password" name="password" class="form-control" maxlength="16" />
+                            </div>
+                            <div class="form-group">
                                 <label for="confirm-password">确认密码</label>
-                                <input type="password" id="confirm-password" maxlength="16" />
-                            </fieldset>
-                            <button type="submit" class="btn btn-primary">提交</button>
+                                <input type="password" id="confirm-password" class="form-control" maxlength="16" />
+                            </div>
+                            <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 提交</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 <%include file="../include/footer.html" />
 
-<script language="javascript">
-
-	$("form").submit(function() {
+<script>
+	$("#primary-form").submit(function() {
 		if ($("#password").val() != $("#confirm-password").val()) {
 			alert("两次密码输入不一致");
 			return false;
 		}
 		return true;
 	});
-	
 </script>
